# EEG_SNN

./: .gitignore  DESIGN.md  README.md  pyproject.toml
data/: README.md
docs/: DC_Encoding_Illustration.drawio  DC_Encoding_Illustration.drawio.html  Hybrid-SNN_EEG_FPGA_Architecture.drawio  Hybrid-SNN_EEG_FPGA_Architecture.drawio.html  Hybrid_SNN_HLS.drawio  Hybrid_SNN_HLS.drawio.html  README.md  direct_current_hls_architecture.md  direct_current_hls_baseline_summary.md  hybrid_snn_architecture.md  reproducibility.md  source_provenance.md  teacher_report.md  technical_report.md
experiments/channel8_hybrid_snn_pilot/: README.md  RESULTS.md  pilot.yaml
experiments/channel8_snn_architecture/: README.md  RESULTS.md  architecture.yaml
experiments/channel8_snn_encoding/: README.md  RESULTS.md  encoding.yaml
experiments/channel8_snn_hardware/: README.md  RESULTS.md  hardware.yaml
experiments/channel8_snn_stability/: README.md  RESULTS.md  sweep.yaml
hls/: README.md  RESULTS.md  RTL_COSIM_RESULTS.md
scripts/: export_hls_golden_vectors.py  generate_hls_golden_header.py  run_channel8_snn_architecture.py  run_channel8_snn_encoding.py  run_channel8_snn_pilot.py  run_channel8_snn_stability.py  run_snn_hardware_feasibility.py  verify_environment.py
src/dc_eeg/: __init__.py  artifacts.py  data.py  experiment.py  hls_contract.py  metrics.py  models.py  snn_architecture.py  snn_encoders.py  snn_encoding.py  (+5 more)
tests/: test_hls_contract.py  test_snn_architecture.py  test_snn_encoding.py  test_snn_hardware.py  test_snn_pilot.py  test_snn_pilot_config.py  test_snn_stability.py
(+12 files in other folders)
