[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snn-hybrid-eeg"
version = "0.1.0"
description = "Curated Hybrid-SNN EEG fatigue detection experiments and fixed-point reference."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]